# q8020-cfd-qutil

./: .gitignore  README.md  pyproject.toml
input/: test_job.toml
src/q8020_cfd_qutil/: __init__.py  backend.py  backend_meta.py  circuit.py  job.py  test_circuit_joint.py  test_job_cli.py
